# miniJSON

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: code_summary.yml  lint.yml  test.yml
include/miniJSON/: errors.h  json_types.h  miniJSON.h
include/miniJSON/detail/: ordered_map.h  parser.h
tests/: basic_parse_test.cpp  delete_test.cpp  getter_test.cpp  iterator_test.cpp  random_data_parse_test.cpp  setter_test.cpp  test-utils.h
tests/data/: random-parse-data-1.json  random-parse-data-2.json
